book and media report content update Sat 07/06/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,9 +10,9 @@
 <div class="title">AHSOKA</div>
 Last backup date: 05/07/2024 05:54 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 07/05/2024 03:48 AM<br>
+Last backup date: 07/06/2024 03:24 AM<br>
 <div class="title">YODA</div>
-Last backup date: 07/03/2024 09:03 AM<br>
+Last backup date: 07/05/2024 04:16 PM<br>
 </div>
 </body>
 </html>
