--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="content">
 <div class="title">AHSOKA</div>
-Last backup date: 07/19/2024 08:09 AM<br>
+Last backup date: 07/24/2024 05:54 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 07/24/2024 03:55 AM<br>
+Last backup date: 07/25/2024 03:50 AM<br>
 <div class="title">YODA</div>
-Last backup date: 07/23/2024 06:13 AM<br>
+Last backup date: 07/24/2024 09:21 AM<br>
 </div>
 </body>
 </html>
