book and media report content update Mon 07/29/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,9 +10,9 @@
 <div class="title">AHSOKA</div>
 Last backup date: 07/24/2024 05:54 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 07/27/2024 03:22 AM<br>
+Last backup date: 07/29/2024 03:21 AM<br>
 <div class="title">YODA</div>
-Last backup date: 07/27/2024 06:39 AM<br>
+Last backup date: 07/28/2024 09:59 PM<br>
 </div>
 </body>
 </html>
