--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="content">
 <div class="title">AHSOKA</div>
-Last backup date: 07/24/2024 05:54 PM<br>
+Last backup date: 07/29/2024 01:06 PM<br>
 <div class="title">ARTOO</div>
 Last backup date: 07/29/2024 03:21 AM<br>
 <div class="title">YODA</div>
-Last backup date: 07/28/2024 09:59 PM<br>
+Last backup date: 07/29/2024 08:10 AM<br>
 </div>
 </body>
 </html>
