--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,9 +10,9 @@
 <div class="title">AHSOKA</div>
 Last backup date: 08/09/2024 11:52 AM<br>
 <div class="title">ARTOO</div>
-Last backup date: 08/13/2024 03:23 AM<br>
+Last backup date: 08/14/2024 03:24 AM<br>
 <div class="title">YODA</div>
-Last backup date: 08/12/2024 06:25 AM<br>
+Last backup date: 08/13/2024 09:17 PM<br>
 </div>
 </body>
 </html>
