book and media report content update Thu 08/15/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -12,7 +12,7 @@ Last backup date: 08/09/2024 11:52 AM<br>
 <div class="title">ARTOO</div>
 Last backup date: 08/14/2024 03:24 AM<br>
 <div class="title">YODA</div>
-Last backup date: 08/13/2024 09:17 PM<br>
+Last backup date: 08/14/2024 06:08 AM<br>
 </div>
 </body>
 </html>
