--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="content">
 <div class="title">AHSOKA</div>
-Last backup date: 08/09/2024 11:52 AM<br>
+Last backup date: 08/15/2024 10:45 AM<br>
 <div class="title">ARTOO</div>
-Last backup date: 08/14/2024 03:24 AM<br>
+Last backup date: 08/15/2024 06:47 PM<br>
 <div class="title">YODA</div>
-Last backup date: 08/14/2024 06:08 AM<br>
+Last backup date: 08/15/2024 06:13 AM<br>
 </div>
 </body>
 </html>
