book and media report content update Sat 08/17/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,7 +10,7 @@
 <div class="title">AHSOKA</div>
 Last backup date: 08/15/2024 10:45 AM<br>
 <div class="title">ARTOO</div>
-Last backup date: 08/15/2024 06:47 PM<br>
+Last backup date: 08/17/2024 03:22 AM<br>
 <div class="title">YODA</div>
 Last backup date: 08/15/2024 06:13 AM<br>
 </div>
