book and media report content update Sun 08/18/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -12,7 +12,7 @@ Last backup date: 08/15/2024 10:45 AM<br>
 <div class="title">ARTOO</div>
 Last backup date: 08/17/2024 03:22 AM<br>
 <div class="title">YODA</div>
-Last backup date: 08/15/2024 06:13 AM<br>
+Last backup date: 08/17/2024 04:21 PM<br>
 </div>
 </body>
 </html>
