book and media report content update Tue 08/20/2024

--- a/report/books/book_images_by_year.html
+++ b/report/books/book_images_by_year.html
@@ -33,6 +33,12 @@
 <body>
 
 <div class="title">Book Images by Year</div>
+<div id="container7">
+    <div class="button" id="button-13">
+        <div id="slide13"></div>
+        <a href="years/2025_book_images.html">2025</a>
+    </div>
+</div>
 <div id="container6">
     <div class="button" id="button-12">
         <div id="slide12"></div>
