book and media report content update Mon 08/26/2024

--- a/landing.html
+++ b/landing.html
@@ -40,6 +40,17 @@
     </div>
 </div>
 
+<div id="container8">
+    <div class="button" id="button-16">
+        <div id="slide16"></div>
+        <a href="https://www.goodreads.com/?ref=nav_home#">Goodreads</a>
+    </div>
+    <div class="button" id="button-17">
+        <div id="slide17"></div>
+        <a href="https://12ft.io/">12ft.io</a>
+    </div>
+</div>
+
 <div id="container2">
     <div class="button" id="button-3">
         <div id="slide3"></div>
