--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,9 +10,9 @@
 <div class="title">AHSOKA</div>
 Last backup date: 08/28/2024 04:50 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 09/01/2024 10:34 AM<br>
+Last backup date: 09/02/2024 01:18 PM<br>
 <div class="title">YODA</div>
-Last backup date: 09/01/2024 06:08 AM<br>
+Last backup date: 09/02/2024 06:26 AM<br>
 </div>
 </body>
 </html>
