--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,9 +10,9 @@
 <div class="title">AHSOKA</div>
 Last backup date: 09/03/2024 04:42 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 09/06/2024 06:49 PM<br>
+Last backup date: 09/07/2024 06:28 PM<br>
 <div class="title">YODA</div>
-Last backup date: 09/06/2024 02:20 PM<br>
+Last backup date: 09/08/2024 02:02 AM<br>
 </div>
 </body>
 </html>
