book and media report content update Sun 09/29/2024

--- a/games/index.html
+++ b/games/index.html
@@ -34,16 +34,27 @@
         <div id="slide2"></div>
         <a href="https://www.nytimes.com/games/connections">CONNECTIONS</a>
     </div>
+    <div class="button" id="button-11">
+        <div id="slide11"></div>
+        <a href="https://www.nytimes.com/games/strands">STRANDS</a>
+    </div>
+</div>
+
+<div id="container5">
+    <div class="button" id="button-9">
+        <div id="slide9"></div>
+        <a href="https://worldle.teuteuf.fr/">WORLDLE</a>
+    </div>
+    <div class="button" id="button-12">
+        <div id="slide12"></div>
+        <a href="https://flagle-game.com/">FLAGLE</a>
+    </div>
 </div>
 
 <div id="container2">
     <div class="button" id="button-3">
         <div id="slide3"></div>
         <a href="https://www.nytimes.com/games/wordle/index.html">WORDLE</a>
-    </div>
-    <div class="button" id="button-4">
-        <div id="slide4"></div>
-        <a href="https://wordle.at/">WORDLE DEUTSCH</a>
     </div>
 </div>
 
@@ -69,10 +80,10 @@
     </div>
 </div>
 
-<div id="container5">
-    <div class="button" id="button-9">
-        <div id="slide9"></div>
-        <a href="https://worldle.teuteuf.fr/">🌍WORLDLE🌍</a>
+<div id="container7">
+    <div class="button" id="button-13">
+        <div id="slide13"></div>
+        <a href="https://redactle.anybrowser.org/">REDACTLE</a>
     </div>
 </div>
 
