book and media report content update Fri 10/11/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,9 +10,9 @@
 <div class="title">AHSOKA</div>
 Last backup date: 10/08/2024 05:36 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 10/09/2024 03:43 AM<br>
+Last backup date: 10/10/2024 06:38 PM<br>
 <div class="title">YODA</div>
-Last backup date: 10/09/2024 06:08 AM<br>
+Last backup date: 10/10/2024 03:28 PM<br>
 </div>
 </body>
 </html>
