--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,9 +10,9 @@
 <div class="title">AHSOKA</div>
 Last backup date: 10/19/2024 12:24 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 10/19/2024 06:54 PM<br>
+Last backup date: 10/20/2024 02:48 PM<br>
 <div class="title">YODA</div>
-Last backup date: 10/19/2024 01:47 PM<br>
+Last backup date: 10/20/2024 06:17 AM<br>
 </div>
 </body>
 </html>
