book and media report content update Tue 10/29/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="content">
 <div class="title">AHSOKA</div>
-Last backup date: 10/24/2024 07:19 PM<br>
+Last backup date: 10/28/2024 11:15 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 10/27/2024 07:10 PM<br>
+Last backup date: 10/28/2024 07:32 PM<br>
 <div class="title">YODA</div>
-Last backup date: 10/27/2024 08:17 PM<br>
+Last backup date: 10/28/2024 09:07 AM<br>
 </div>
 </body>
 </html>
