--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,9 +10,9 @@
 <div class="title">AHSOKA</div>
 Last backup date: 10/30/2024 10:27 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 11/05/2024 12:57 PM<br>
+Last backup date: 11/06/2024 03:46 PM<br>
 <div class="title">YODA</div>
-Last backup date: 10/30/2024 02:31 PM<br>
+Last backup date: 11/06/2024 06:14 AM<br>
 </div>
 </body>
 </html>
