--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,9 +10,9 @@
 <div class="title">AHSOKA</div>
 Last backup date: 11/17/2024 09:03 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 11/24/2024 06:54 PM<br>
+Last backup date: 11/25/2024 07:20 PM<br>
 <div class="title">YODA</div>
-Last backup date: 11/22/2024 02:04 PM<br>
+Last backup date: 11/25/2024 09:32 AM<br>
 </div>
 </body>
 </html>
