book and media report content update Mon 12/02/2024

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,7 +10,7 @@
 <div class="title">AHSOKA</div>
 Last backup date: 11/17/2024 09:03 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 11/30/2024 03:59 AM<br>
+Last backup date: 12/01/2024 08:50 PM<br>
 <div class="title">YODA</div>
 Last backup date: 11/29/2024 04:05 PM<br>
 </div>
