--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -10,9 +10,9 @@
 <div class="title">AHSOKA</div>
 Last backup date: 11/17/2024 09:03 PM<br>
 <div class="title">ARTOO</div>
-Last backup date: 12/01/2024 08:50 PM<br>
+Last backup date: 12/02/2024 07:20 PM<br>
 <div class="title">YODA</div>
-Last backup date: 11/29/2024 04:05 PM<br>
+Last backup date: 12/02/2024 11:55 AM<br>
 </div>
 </body>
 </html>
