book and media report content update Tue 12/03/2024

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -172,5 +172,11 @@
     <img src="img/portrait/sketch3.png" width="300" >
     <img src="img/portrait/sketch4.png" width="300" >
 </div>
+<div class="title">Other</div>
+<div class="content">
+    <img src="img/other/crab.jpg" width="300" >
+    <img src="img/other/herfordstudent1.jpeg" width="300" >
+    <img src="img/other/herfordstudent1.jpeg" width="300" >
+</div>
 </body>
 </html>
