book and media report content update Sat 02/08/2025

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -49,6 +49,30 @@
     <img src="img/starwars/chewybook.jpg" width="300" >
 
     <img src="img/starwars/jabba1.jpeg" width="300" >
+    <img src="img/starwars/jaburrito.jpeg" width="300" >
+</div>
+<div class="title">Video Games</div>
+<div class="content">
+    <img src="img/videogames/halo1.jpeg" width="300" >
+    <img src="img/videogames/halo2.jpeg" width="300" >
+</div>
+<div class="title">Muppetry</div>
+<div class="content">
+    <img src="img/muppetry/lotr1.jpeg" width="300" >
+    <img src="img/muppetry/lotr2.jpeg" width="300" >
+    <img src="img/muppetry/lotr3.jpeg" width="300" >
+    <img src="img/muppetry/luigi1.jpeg" width="300" >
+    <img src="img/muppetry/luigi2.jpeg" width="300" >
+    <img src="img/muppetry/luigi3.jpeg" width="300" >
+    <img src="img/muppetry/luigi4.jpeg" width="300" >
+    <img src="img/muppetry/zelda1.jpeg" width="300" >
+    <img src="img/muppetry/zelda2.jpeg" width="300" >
+    <img src="img/muppetry/longkermit1.jpeg" width="300" >
+    <img src="img/muppetry/mega1.jpeg" width="300" >
+    <img src="img/muppetry/mega2.jpeg" width="300" >
+    <img src="img/muppetry/mega3.jpeg" width="300" >
+    <img src="img/muppetry/metroid1.jpeg" width="300" >
+    <img src="img/muppetry/metroid2.jpeg" width="300" >
 </div>
 <div class="title">Among Us</div>
 <div class="content">
@@ -176,7 +200,7 @@
 <div class="content">
     <img src="img/other/crab.jpg" width="300" >
     <img src="img/other/herfordstudent1.jpeg" width="300" >
-    <img src="img/other/herfordstudent1.jpeg" width="300" >
+    <img src="img/other/herfordstudent2.jpeg" width="300" >
 </div>
 </body>
 </html>
