book and media report content update Wed 02/12/2025

--- a/avatar/index.html
+++ b/avatar/index.html
@@ -55,6 +55,7 @@
 <div class="content">
     <img src="img/videogames/halo1.jpeg" width="300" >
     <img src="img/videogames/halo2.jpeg" width="300" >
+    <img src="img/videogames/mariosoda.jpg" width="300" >
 </div>
 <div class="title">Muppetry</div>
 <div class="content">
