--- a/avatar/index.html
+++ b/avatar/index.html
@@ -175,6 +175,7 @@
     <img src="img/gemini/robo-bob8.jpg" width="300" >
 
     <img src="img/gemini/robo-bob9.jpg" width="300" >
+    <img src="img/gemini/robo-bob9_w_bg_sq.jpg" width="300" >
 </div>
 <div class="title">Business Portrait</div>
 <div class="content">
