--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="content">
 <div class="title">ARTOO</div>
-Last backup date: 02/25/2025 07:54 PM<br>
+Last backup date: 02/26/2025 07:21 PM<br>
 <div class="title">AHSOKA</div>
 Last backup date: 02/13/2025 08:27 PM<br>
 <div class="title">YODA</div>
-Last backup date: 02/25/2025 03:09 PM<br>
+Last backup date: 02/26/2025 07:43 AM<br>
 </div>
 </body>
 </html>
