book and media report content update Wed 03/26/2025

--- a/landing.html
+++ b/landing.html
@@ -69,8 +69,12 @@
     </div>
     <div class="button" id="button-6">
         <div id="slide6"></div>
-        <a href="report/psplus">PS Plus</a>
+        <a href="https://www.playstation.com/en-us/ps-plus/games/?category=MONTHLY_GAMES#plus-container">PS Plus</a>
     </div>
+<!--    <div class="button" id="button-6">-->
+<!--        <div id="slide6"></div>-->
+<!--        <a href="report/psplus">PS Plus</a>-->
+<!--    </div>-->
 </div>
 
 <div id="container4">
