--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="content">
 <div class="title">ARTOO</div>
-Last backup date: 06/24/2025 03:31 AM<br>
+Last backup date: 06/25/2025 03:35 AM<br>
 <div class="title">AHSOKA</div>
 Last backup date: 02/13/2025 08:27 PM<br>
 <div class="title">YODA</div>
-Last backup date: 06/23/2025 06:08 AM<br>
+Last backup date: 06/24/2025 01:41 PM<br>
 </div>
 </body>
 </html>
