--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="content">
 <div class="title">ARTOO</div>
-Last backup date: 07/06/2025 03:21 AM<br>
+Last backup date: 07/07/2025 02:35 PM<br>
 <div class="title">AHSOKA</div>
 Last backup date: 02/13/2025 08:27 PM<br>
 <div class="title">YODA</div>
