--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="content">
 <div class="title">ARTOO</div>
-Last backup date: 07/24/2025 03:20 AM<br>
+Last backup date: 07/25/2025 03:22 AM<br>
 <div class="title">AHSOKA</div>
 Last backup date: 02/13/2025 08:27 PM<br>
 <div class="title">YODA</div>
-Last backup date: 07/23/2025 02:03 AM<br>
+Last backup date: 07/24/2025 02:11 PM<br>
 </div>
 </body>
 </html>
