--- a/avatar/index.html
+++ b/avatar/index.html
@@ -22,9 +22,21 @@
 
     <img src="img/dino_portrait1.jpg" width="300" >
     <img src="img/dino_portrait2.jpg" width="300" >
-    <img src="img/tricerapants1.jpg" width="300" >
-
     <img src="img/spacedino.jpeg" width="300" >
+
+    <img src="img/tricerapants1.jpg" width="300" >
+    <img src="img/gpt_triceratopspants2.jpeg" width="300" >
+    <img src="img/gpt_pizzagolem.jpeg" width="300" >
+
+    <img src="img/gpt_reaper1.jpeg" width="300" >
+    <img src="img/gpt_reaper2.jpeg" width="300" >
+    <img src="img/gpt_reaper3.jpeg" width="300" >
+
+    <img src="img/gpt_sharkinajar.jpeg" width="300" >
+    <img src="img/gpt_seuss1.jpeg" width="300" >
+    <img src="img/gpt_seuss2.jpeg" width="300" >
+
+    <img src="img/gpt_green_warlock.jpeg" width="300" >
 </div>
 <div class="title">Star Wars</div>
 <div class="content">
@@ -139,6 +151,14 @@
 
     <img src="img/venomous/slowloris/sljedi1.jpeg" width="300" >
     <img src="img/venomous/slowloris/sljedi2.jpeg" width="300" >
+    <img src="img/venomous/slowloris/gpt_jedi.jpeg" width="300" >
+
+    <img src="img/venomous/slowloris/gpt_fancy1.jpeg" width="300" >
+    <img src="img/venomous/slowloris/gpt_fancy2.jpeg" width="300" >
+    <img src="img/venomous/slowloris/gpt_warlock.jpeg" width="300" >
+
+    <img src="img/venomous/slowloris/gpt_space1.jpeg" width="300" >
+    <img src="img/venomous/slowloris/gpt_space2.jpeg" width="300" >
 </div>
 <div class="title">Memes</div>
 <div class="content">
