--- a/landing.html
+++ b/landing.html
@@ -97,7 +97,7 @@
     </div>
     <div class="button" id="button-10">
         <div id="slide10"></div>
-        <a href="https://www.bing.com/images/create/">DALL-E 3</a>
+        <a href="https://www.bing.com/images/create/">Image Creator</a>
     </div>
 </div>
 
