--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="content">
 <div class="title">ARTOO</div>
-Last backup date: 08/07/2025 03:20 AM<br>
+Last backup date: 08/08/2025 03:21 AM<br>
 <div class="title">AHSOKA</div>
 Last backup date: 02/13/2025 08:27 PM<br>
 <div class="title">YODA</div>
-Last backup date: 08/06/2025 10:43 AM<br>
+Last backup date: 08/07/2025 01:32 PM<br>
 </div>
 </body>
 </html>
