book and media report content update Fri 08/29/2025

--- a/landing.html
+++ b/landing.html
@@ -47,7 +47,7 @@
     </div>
     <div class="button" id="button-17">
         <div id="slide17"></div>
-        <a href="https://12ft.io/">12ft.io</a>
+        <a href="https://archive.ph/">archive.ph</a>
     </div>
 </div>
 
