book and media report content update Fri 09/05/2025

--- a/avatar/img/index.html
+++ b/avatar/img/index.html
@@ -112,6 +112,10 @@
     <img src="img/venomous/slowloris/slwarrior.jpeg" width="300" >
     <img src="img/venomous/slowloris/slwarlock.jpeg" width="300" >
 
+    <img src="img/venomous/slowloris/loris42.jpg" width="300" >
+    <img src="img/venomous/slowloris/loris-min1.jpg" width="300" >
+    <img src="img/venomous/slowloris/loris-min2.jpg" width="300" >
+
     <img src="img/venomous/slowloris/sljedi1.jpeg" width="300" >
     <img src="img/venomous/slowloris/sljedi2.jpeg" width="300" >
 </div>
