fix slow loris avatar picture set

--- a/avatar/img/index.html
+++ b/avatar/img/index.html
@@ -118,6 +118,15 @@
 
     <img src="img/venomous/slowloris/sljedi1.jpeg" width="300" >
     <img src="img/venomous/slowloris/sljedi2.jpeg" width="300" >
+    <img src="img/venomous/slowloris/gpt_jedi.jpeg" width="300" >
+
+    <img src="img/venomous/slowloris/gpt_fancy1.jpeg" width="300" >
+    <img src="img/venomous/slowloris/gpt_fancy2.jpeg" width="300" >
+    <img src="img/venomous/slowloris/gpt_warlock.jpeg" width="300" >
+
+    <img src="img/venomous/slowloris/gpt_space1.jpeg" width="300" >
+    <img src="img/venomous/slowloris/gpt_space2.jpeg" width="300" >
+
 </div>
 <div class="title">Memes</div>
 <div class="content">
