book and media report content update Sat 11/22/2025

--- a/games/index.html
+++ b/games/index.html
@@ -92,6 +92,10 @@
         <div id="slide10"></div>
         <a href="life">Life</a>
     </div>
+    <div class="button" id="button-14">
+        <div id="slide14"></div>
+        <a href="Zork">Zork</a>
+    </div>
 </div>
 
 </body>
