book and media report content update Sun 11/23/2025

--- a/landing.html
+++ b/landing.html
@@ -77,19 +77,6 @@
 <!--    </div>-->
 </div>
 
-<div id="container4">
-    <div class="button" id="button-7">
-        <div id="slide7"></div>
-        <!--Sweetwater newest hardtail right handed solidbody guitars under 1500-->
-        <a href="https://www.sweetwater.com/c590--Right-handed_Solidbody_Guitars?all&sb=newest&params=eyJmYWNldCI6eyJOdW1iZXIgb2YgU3RyaW5ncyI6WzcsIjYiXSwiQnJpZGdlL1RhaWxwaWVjZSI6WyJGaXhlZCJdfSwicmFuZ2UiOnsiUHJpY2UgUmFuZ2UiOnsibG93ZXIiOiIiLCJ1cHBlciI6IjE1MDAifX19">New Guitars</a>
-    </div>
-    <div class="button" id="button-8">
-        <div id="slide8"></div>
-        <!--Sweetwater newest right handed basses under 1500-->
-        <a href="https://www.sweetwater.com/c580--Bass_Guitars?all&sb=newest&params=eyJmYWNldCI6eyJMZWZ0LS9SaWdodC1oYW5kZWQiOlsiUmlnaHQiXX0sInJhbmdlIjp7IlByaWNlIFJhbmdlIjp7Imxvd2VyIjoiIiwidXBwZXIiOiIxNTAwIn19fQ">New Basses</a>
-    </div>
-</div>
-
 <div id="container5">
     <div class="button" id="button-9">
         <div id="slide9"></div>
@@ -118,6 +105,32 @@
         <a href="games">Games</a>
     </div>
 </div>
+
+<div id="container4">
+    <div class="button" id="button-7">
+        <div id="slide7"></div>
+        <!--Sweetwater newest hardtail right handed solidbody guitars under 1500-->
+        <a href="https://www.sweetwater.com/c590--Right-handed_Solidbody_Guitars?all&sb=newest&params=eyJmYWNldCI6eyJOdW1iZXIgb2YgU3RyaW5ncyI6WzcsIjYiXSwiQnJpZGdlL1RhaWxwaWVjZSI6WyJGaXhlZCJdfSwicmFuZ2UiOnsiUHJpY2UgUmFuZ2UiOnsibG93ZXIiOiIiLCJ1cHBlciI6IjE1MDAifX19">New Guitars</a>
+    </div>
+    <div class="button" id="button-8">
+        <div id="slide8"></div>
+        <!--Sweetwater newest right handed basses under 1500-->
+        <a href="https://www.sweetwater.com/c580--Bass_Guitars?all&sb=newest&params=eyJmYWNldCI6eyJMZWZ0LS9SaWdodC1oYW5kZWQiOlsiUmlnaHQiXX0sInJhbmdlIjp7IlByaWNlIFJhbmdlIjp7Imxvd2VyIjoiIiwidXBwZXIiOiIxNTAwIn19fQ">New Basses</a>
+    </div>
+</div>
+
+<div id="container15">
+    <div class="button" id="button-15">
+        <div id="slide15"></div>
+        <a href="https://www.audible.com/ep/audiobook-deals">Audible Deals</a>
+    </div>
+    <div class="button" id="button-18">
+        <div id="slide18"></div>
+        <a href="https://www.audible.com/special-promo/2for1">Audible 2for1</a>
+    </div>
+</div>
+
+
 
 </body>
 </html>
