book and media report content update Thu 11/27/2025

--- a/report/backup/index.html
+++ b/report/backup/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="content">
 <div class="title">ARTOO</div>
-Last backup date: 11/25/2025 03:20 AM<br>
+Last backup date: 11/26/2025 06:32 PM<br>
 <div class="title">AHSOKA</div>
 Last backup date: 11/24/2025 07:16 PM<br>
 <div class="title">YODA</div>
