--- a/report/books/book_images_by_year.html
+++ b/report/books/book_images_by_year.html
@@ -34,6 +34,10 @@
 
 <div class="title">Book Images by Year</div>
 <div id="container7">
+    <div class="button" id="button-14">
+        <div id="slide14"></div>
+        <a href="years/2026_book_images.html">2026</a>
+    </div>
     <div class="button" id="button-13">
         <div id="slide13"></div>
         <a href="years/2025_book_images.html">2025</a>
